css/styles.css
/* ... */
ul#nav-list li {
  padding: 0.75em;
}

ul#nav-list.active {
  width: 100%;
  height: 300px;
  top: 85px;
  left: 0;
}

.nav-link {
  padding: 0;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  text-decoration: none;
  color: var(--middle-color);
  transition: all 200ms ease-in-out;
}

.nav-link:hover {
  color: var(--accent-color);
}

.about {
  background-color: var(--accent-color);
  color: #fdfdfd;
  padding: 0.5em 1em;
}

.about:hover {
  color: #4c2723;
}

#nav-logo {
  width: 50%;
  height: 90%;
  box-sizing: border-box;
  background-image: url(../img/ossummit-logo.svg);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 70%;
  background-size: contain;
}

#home,
#about {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  background-color: rgba(241, 241, 241, 0.85);
  background-image: url(../img/hero-img.jpg);
  background-position: top center;
  background-size: cover;
  background-repeat: no-repeat;
  background-blend-mode: color-dodge;
  background-attachment: fixed;
  height: fit-content;
}

#about {
  padding: 15em 0 5em;
  background-image: url(../img/hero2.jpg);
}

.hero-container,
.about-container,
.program-container,
.footer-container {
  display: flex;
  flex-wrap: wrap;
  width: 85%;
}

.about-container {
  justify-content: center;
  align-items: center;
  text-align: center;
}

.hero-container {
  margin-top: 9rem;
  justify-content: center;
  align-items: center;
  padding-bottom: 6em;
}

.hero-container h3 {
  font-size: 30px;
  font-weight: 400;
  color: var(--accent-color);
  text-align: center;
}

#hero-title,
#about-title {
  margin: 0;
  padding: 0;
  text-align: center;
  font-size: 72px;
  line-height: 60px;
  font-family: var(--title-font);
  background-image: url(../img/hero-img.jpg);
  background-position: top center;
  background-size: contain;
  -webkit-background-clip: text;
  background-clip: text;
  color: #ef513cb3;
}

#about-title {
  background-image: url(../img/hero2.jpg);
}

#hero-text,
#about-text {
  margin: 0.75em 0 0.25em 0;
  font-size: 20px;
  width: 100%;
  text-align: center;
}

#about-text {
  margin: 1em 0;
  padding: 1.5em;
  width: 80%;
  background-color: rgba(255, 255, 255, 0.754);
  border-radius: 3px;
  border: 2px solid var(--light-color-trans);
  font-size: 16px;
}

#hero-info h4 {
  margin: 0;
  padding: 0;
  font-size: 27px;
  font-weight: 600;
  text-align: center;
}

#hero-info h5 {
  margin: 0;
  padding: 1em 0;
  font-size: 22px;
  font-weight: 300;
  text-align: center;
}

#program,
#speakers,
#partners,
#footer,
#footer-about,
#summit-logo,
#past-summit {
  display: flex;
  height: fit-content;
  padding: 2em 0 10em;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  background-color: var(--dark-color);
}

#summit-logo {
  background-color: #fff;
  padding: 3em 0;
}

#past-summit {
  background-color: #ecebef;
  padding: 3em 0;
}

#logo-img {
  width: 12em;
  height: 12em;
  box-sizing: border-box;
  background-image: url(../img/ossummit-logo.svg);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: contain;
}

.past-img,
.past-img2 {
  height: 7em;
  margin: 0.75em;
  border-radius: 2px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--accent-color-trans);
  background-image: url(../img/past-sumit2020.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-blend-mode: soft-light;
  background-size: cover;
  flex: 1 1 90%;
  color: #fdfdfd;
  text-align: center;
  font-size: 26px;
  font-weight: 800;
  text-decoration: none;
}

.past-img2 {
  background-image: url(../img/past-summit2021.jpg);
}

.section-title {
  width: 80%;
  text-align: center;
  text-transform: uppercase;
  font-size: 27px;
  font-weight: 400;
  color: #fdfdfd;
  margin: 0;
  padding: 1em 0;
}

.dark {
  color: var(--dark-color);
}

.section-title::after {
  content: "";
  display: block;
  width: 63px;
  height: 1px;
  background-color: var(--accent-color);
  margin: 0.75em auto;
  opacity: 90%;
}

#program {
  padding: 2.5em 0 3em;
  background-image: url(../img/pattern_bg.png);
  background-repeat: repeat;
  background-blend-mode: darken;
}

.program-container {
  display: grid;
  grid-template-columns: repeat(15, 1fr);
  column-gap: 0.5em;
  row-gap: 0.5em;
  width: 95%;
}

.program-card {
  background-color: var(--light-color-trans);
  background-blend-mode: soft-light;
  border-radius: 1px;
  grid-column: span 15;
  display: flex;
  align-items: center;
  justify-content: space-around;
  height: 7em;
}

.program-btn,
.join-btn {
  display: none;
  margin: 2em;
  text-transform: uppercase;
  color: var(--light-color);
  font-size: 15px;
  font-weight: 400;
}

.join-btn {
  display: block;
  text-decoration: none;
  background-color: var(--accent-color);
  padding: 1.5em;
  font-weight: 500;
}

#lecture,
#meet,
#learn,
#explore,
#future {
  background-image: url(../img/lecture.png);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: contain;
  width: 70%;
  height: 70%;
  flex: 1 0 25%;
}

#meet {
  background-image: url(../img/meet.png);
}

#learn {
  background-image: url(../img/learn.png);
  width: 60%;
  height: 60%;
}

#explore {
  background-image: url(../img/explore.png);
  width: 60%;
  height: 60%;
}

#future {
  background-image: url(../img/adventurer.png);
}

.progam-title {
  font-size: 20px;
  color: var(--accent-color);
  flex: 1 0 25%;
  text-align: center;
}

.program-text {
  font-size: 16px;
  line-height: 15px;
  text-align: start;
  color: var(--light-color);
  flex: 1 0 50%;
}

#speakers {
  padding: 4em 0 6em;
  margin: 0;
  background-color: #fdfdfd;
  background-image: none;
}

#speaker-container {
  display: grid;
  width: 85%;
  grid-template-columns: repeat(12, 1fr);
  column-gap: 1.25em;
  row-gap: 1.25em;
}

.speaker-card {
  display: flex;
  grid-column: span 12;
}
/* ... */

